--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="placeholder-product-icon">X</div>
-            <h2>Dashboard</h2>
+            <div class="sidebar-heading">
+                <div class="placeholder-product-icon">X</div>
+                <h2>Dashboard</h2>
+            </div>
             <ul class="menu">
                 <li class="menu-entry"><a href="">Home</a></li>
                 <li class="menu-entry"><a href="">Profile</a></li>
@@ -28,108 +30,144 @@
                 <li class="menu-entry"><a href="">Privacy</a></li>
             </ul>
         </div>
-        <div class="searchbar">
-            <div class="search-pane">
+        <div class="main-panel">
+            <div class="searchbar">
                 <input name="search" type="search" value="" placeholder="Search" />
                 <div id="bell">Bell</div>
+                <div class="profile-pic" id="upper-pfp">Bell</div>
                 <div class="username">Fake Guy</div>
             </div>
-        </div>
-        <div class="header">
-            <div class="user-greeting">Hi There, Fake Guy (@fakeguy)</div>
-        </div>
-        <div class="button-controls">
-            <button type="button">New</button>
-            <button type="button">Upload</button>
-            <button type="button">Share</button>
-        </div>
-        <div class="projects">
-            <div class="card">
-                <div class="card-controls">
-                    <div class="placeholder" id="favorite">Fav</div>
-                    <div class="placeholder" id="hide">Hide</div>
-                    <div class="placeholder" id="share">Share</div>
+            <div class="header">
+                <div class="user-greeting">Fake Guy (@fakeguy)</div>
+                <div class="button-controls">
+                    <button type="button">New</button>
+                    <button type="button">Upload</button>
+                    <button type="button">Share</button>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-controls">
-                    <div class="placeholder" id="favorite">Fav</div>
-                    <div class="placeholder" id="hide">Hide</div>
-                    <div class="placeholder" id="share">Share</div>
+            <div class="projects">
+                <h2 class="projects-heading">Projects</h2>
+                <div class="card">
+                    <h3 class="card-header">Cool Project</h3>
+                    <p class="card-body">
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint cillum sint consectetur cupidatat.
+                    </p>
+                    <div class="card-controls">
+                        <div class="placeholder" id="favorite">F</div>
+                        <div class="placeholder" id="hide">H</div>
+                        <div class="placeholder" id="share">S</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-header">Cool Project</h3>
+                    <p class="card-body">
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint cillum sint consectetur cupidatat.
+                    </p>
+                    <div class="card-controls">
+                        <div class="placeholder" id="favorite">F</div>
+                        <div class="placeholder" id="hide">H</div>
+                        <div class="placeholder" id="share">S</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-header">Cool Project</h3>
+                    <p class="card-body">
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint cillum sint consectetur cupidatat.
+                    </p>
+                    <div class="card-controls">
+                        <div class="placeholder" id="favorite">F</div>
+                        <div class="placeholder" id="hide">H</div>
+                        <div class="placeholder" id="share">S</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-header">Cool Project</h3>
+                    <p class="card-body">
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint cillum sint consectetur cupidatat.
+                    </p>
+                    <div class="card-controls">
+                        <div class="placeholder" id="favorite">F</div>
+                        <div class="placeholder" id="hide">H</div>
+                        <div class="placeholder" id="share">S</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-header">Cool Project</h3>
+                    <p class="card-body">
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint cillum sint consectetur cupidatat.
+                    </p>
+                    <div class="card-controls">
+                        <div class="placeholder" id="favorite">F</div>
+                        <div class="placeholder" id="hide">H</div>
+                        <div class="placeholder" id="share">S</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-header">Cool Project</h3>
+                    <p class="card-body">
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint cillum sint consectetur cupidatat.
+                    </p>
+                    <div class="card-controls">
+                        <div class="placeholder" id="favorite">F</div>
+                        <div class="placeholder" id="hide">H</div>
+                        <div class="placeholder" id="share">S</div>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-controls">
-                    <div class="placeholder" id="favorite">Fav</div>
-                    <div class="placeholder" id="hide">Hide</div>
-                    <div class="placeholder" id="share">Share</div>
+            <div class="info-panel">
+                <h2 class="announcements-heading">Announcements</h2>
+                <div class="announcements">
+                    <div class="announcement">
+                        <h3>Announcement 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                            sint cillum sint consectetur cupidatat.
+                        </p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Announcement 2</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                            sint cillum sint consectetur cupidatat.
+                        </p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Announcement 3</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                            sint cillum sint consectetur cupidatat.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-controls">
-                    <div class="placeholder" id="favorite">Fav</div>
-                    <div class="placeholder" id="hide">Hide</div>
-                    <div class="placeholder" id="share">Share</div>
+                <h2 class="trending-heading">Trending</h2>
+                <div class="trending">
+                    <div class="bio-card">
+                        <div class="placeholder-profile-pic">Pic</div>
+                        <div class="bio-username">@broski</div>
+                        <div class="bio-tagline">Building Better Worlds</div>
+                    </div>
+                    <div class="bio-card">
+                        <div class="placeholder-profile-pic">Pic</div>
+                        <div class="bio-username">@broski</div>
+                        <div class="bio-tagline">Building Better Worlds</div>
+                    </div>
+                    <div class="bio-card">
+                        <div class="placeholder-profile-pic">Pic</div>
+                        <div class="bio-username">@broski</div>
+                        <div class="bio-tagline">Building Better Worlds</div>
+                    </div>
+                    <div class="bio-card">
+                        <div class="placeholder-profile-pic">Pic</div>
+                        <div class="bio-username">@broski</div>
+                        <div class="bio-tagline">Building Better Worlds</div>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-controls">
-                    <div class="placeholder" id="favorite">Fav</div>
-                    <div class="placeholder" id="hide">Hide</div>
-                    <div class="placeholder" id="share">Share</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-controls">
-                    <div class="placeholder" id="favorite">Fav</div>
-                    <div class="placeholder" id="hide">Hide</div>
-                    <div class="placeholder" id="share">Share</div>
-                </div>
-            </div>
-        </div>
-        <div class="announcements">
-            <div class="announcement">
-                <h3>Announcement 1</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint
-                    cillum sint consectetur cupidatat.
-                </p>
-            </div>
-            <div class="announcement">
-                <h3>Announcement 2</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint
-                    cillum sint consectetur cupidatat.
-                </p>
-            </div>
-            <div class="announcement">
-                <h3>Announcement 3</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint
-                    cillum sint consectetur cupidatat.
-                </p>
-            </div>
-        </div>
-        <div class="trending">
-            <div class="bio-card">
-                <div class="placeholder-profile-pic">Pic</div>
-                <div class="bio-username">@broski</div>
-                <div class="bio-tagline">Building Better Worlds</div>
-            </div>
-            <div class="bio-card">
-                <div class="placeholder-profile-pic">Pic</div>
-                <div class="bio-username">@broski</div>
-                <div class="bio-tagline">Building Better Worlds</div>
-            </div>
-            <div class="bio-card">
-                <div class="placeholder-profile-pic">Pic</div>
-                <div class="bio-username">@broski</div>
-                <div class="bio-tagline">Building Better Worlds</div>
-            </div>
-            <div class="bio-card">
-                <div class="placeholder-profile-pic">Pic</div>
-                <div class="bio-username">@broski</div>
-                <div class="bio-tagline">Building Better Worlds</div>
             </div>
         </div>
     </div>
